bug: fixed item description overflow

--- a/client/src/containers/ItemDetails/ItemDetails.css
+++ b/client/src/containers/ItemDetails/ItemDetails.css
@@ -51,6 +51,7 @@
 
 .ItemsDetails .item-description {
   margin-top: 64px;
+  overflow  : auto;
 }
 
 .ItemsDetails .item-description h2 {
